--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
       rel="stylesheet"
     />
 
+    <!-- Instrument  -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
+
+
+
+
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="heading">
-      <h1 id="h-text">Good After <span class="purple-name">Stranger</span></h1>
+      <h1 id="h-text">Good After <span class="purple">Stranger</span></h1>
       <p>Ready For Some Lessons?</p>
     </div>
 
